--- a/labs_26/src/Work3.html
+++ b/labs_26/src/Work3.html
@@ -2,14 +2,17 @@
 <html ng-app="myApp">
 <head>
     <meta charset="UTF-8">
-    <title>Work1</title>
+    <title>Work3</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
 </head>
 <body ng-controller="myCtrl">
-    <p>Name: {{name}}</p>
-    <p>Surname: {{surname}}</p>
-    <p>Age: {{age}}</p>
 
-    <script src="./Work1.js"></script>
+  <ul>
+    <li ng-repeat="item in items">{{item}}</li>
+  </ul>
+
+  <a href="#" ng-click="reverseList()">Зворотній порядок</a>
+
+    <script src="./Work3.js"></script>
 </body>
 </html>
