--- a/labs_26/src/Work1.html
+++ b/labs_26/src/Work1.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
-<head>
-    <meta charset="UTF-8">
-    <title>Work1</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-</head>
-<body>
-    <div ng-controller="myCtrl">
-      <p>Початковий масив :<span ng-repeat="number in numbers">{{number}} </span></p>
-      <p>Масив з додаванням числа 3 :  <span ng-repeat="number in numbers">{{number + 3}} </span></p>
-    </div>
 
-    <script src="./Work1.js"></script>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+</head>
+
+<body>
+  <div ng-controller="MyController">
+    <p>Початковий масив: <span ng-repeat="number in numbers">
+      {{number}}
+    </span>
+    </p>
+    <p>Масив з додаванням 3: <span ng-repeat="number in numbers">
+      {{number + 3}}
+    </span>
+  </p>
+  </div>
+
+  <script src="./Work1.js"></script>
 </body>
 </html>
